Make the sample ttinterpreter run in java11.